# LingChat

./: .gitignore  README.md  pyproject.toml
lingchat/: __init__.py  __main__.py  server.py
tests/: test_bridge.py  test_sessions_bridge.py
web/: app.js  index.html  style.css
